# moneromesh

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: Cargo.toml
docs/: monerod-endpoint-info.md
src/: index.ts
src/config/: index.ts
src/middleware/: errorHandler.ts
src/routes/: health.ts  index.ts  stats.ts
src/services/: monerodClient.ts  p2poolClient.ts  statsService.ts
static/website/components/: footer.html  header.html
static/website/pages/: about.html  home.html
static/website/scripts/: fetch-components.js
static/website/styles/: about.css  base-styles.css  footer.css  header.css  home.css
