[package]
name = "moneromesh-backend"
authors = ["itsgerliz"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["macros", "rt"] }
